--- a/style.css
+++ b/style.css
@@ -3,6 +3,34 @@
     padding: 0;
 }
 
+
+
+/* navbar css  */
+
+/* 
+@media (mix-width: 991px){
+.mobail-navbar{
+  display: block;
+}
+.navbar ul{
+  display: none;
+}
+} */
+
+
+/* index css  */
+
+
+
+
+/* main css  */
+
+.sliderimg{
+    background: linear-gradient(rgb(23 23 23 / 68%),rgb(13 13 14 / 77%)),url(/img/pix.jpg) center no-repeat;
+    background-size: cover;
+    height: 55vh;
+}
+
 .card-size{
     width: 100%;
     height: 30vh;
@@ -10,16 +38,55 @@
 .img{
     height: 70vh ;
 }
-.imgop{
-    opacity: 0.8;
+  
+
+  
+
+  /* services css  */
+  .section-bg {
+    background-color: #f3f5fa;
+  }
+
+  .icon-box {
+    background: #fff;
+  }
+
+.photecard{
+  height: 30vh;
 }
 
 
 
+
+/* project css  */
+
+
+/* 
+
+.projectimg{
+  height: 50vh;
+}
+ */
+
+
+/* @media (mix-width: 700px){
+.projectimg{
+  height: 20px;
+}
+} */
+/* 
+@media (mix-width: 700px) {
+.projectimg{
+  height: 20px !important;
+}
+} */
+
+
+
+
+
+
 /* about css  */
-
-
-
 
 .linestyle{
     cursor: pointer;
@@ -35,12 +102,7 @@
     background-color: rgba(18 173 230 / 6%) !important;
 }
 
-/* 
-@media screen and (mix-width: 780px) {
-    body {
-      background-color: lightgreen !important;
-    }
-  } */
+
 
 
 
